--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ edition = "2018"
 etcommon-bigint = "0.2"
 etcommon-rlp = "0.2"
 futures = "0.1"
-log = "0.3"
 rand = "0.3.12"
 secp256k1-plus = "0.5"
 sha3 = "0.6"
@@ -22,7 +21,8 @@ time = "0.1"
 tokio-core = "0.1"
 tokio-io = "0.1"
 tokio-timer-plus = "0.1"
+tracing = "0.1"
 url = "1.5.1"
 
 [dev-dependencies]
-env_logger = "0.3"
+tracing-subscriber = "0.2"
