--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,8 @@ chrono = "0.4"
 etcommon-bigint = "0.2"
 etcommon-rlp = "0.2"
 futures = "0.1"
-rand = "0.3.12"
-secp256k1-plus = "0.5"
+k256 = { version = "0.5", default-features = false, features = ["ecdsa"] }
+rand = "0.7"
 sha3 = "0.9"
 tokio-core = "0.1"
 tokio-io = "0.1"
