--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,13 @@ repository = "https://github.com/rust-ethereum/discv4"
 edition = "2018"
 
 [dependencies]
+chrono = "0.4"
 etcommon-bigint = "0.2"
 etcommon-rlp = "0.2"
 futures = "0.1"
 rand = "0.3.12"
 secp256k1-plus = "0.5"
 sha3 = "0.9"
-time = "0.1"
 tokio-core = "0.1"
 tokio-io = "0.1"
 tokio-timer-plus = "0.1"
