--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,18 +11,20 @@ repository = "https://github.com/rust-ethereum/discv4"
 edition = "2018"
 
 [dependencies]
+bytes = "0.4"
 chrono = "0.4"
 fixed-hash = { version = "*", features = ["std"] }
-futures = "0.1"
+futures = { version = "0.3", features = ["compat"] }
+futures01 = { package = "futures", version = "0.1" }
 k256 = { version = "0.5", default-features = false, features = ["ecdsa"] }
 primitive-types = { version = "0.7", default-features = false, features = ["rlp"] }
 rand = "0.7"
 rlp = "0.4"
 sha3 = "0.9"
-tokio-core = "0.1"
+tokio = "0.1"
+tokio-compat = "0.1"
 tracing = "0.1"
 url = "2"
 
 [dev-dependencies]
-tokio-timer-plus = "0.1"
 tracing-subscriber = "0.2"
