--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,22 +13,31 @@ edition = "2018"
 [dependencies]
 anyhow = "1"
 arrayref = "0.3"
-bytes = "0.4"
+arrayvec = "0.5.1"
+async-trait = "0.1"
+bytes = "0.5"
 chrono = "0.4"
 fixed-hash = { version = "*", features = ["std"] }
-futures = { version = "0.3", features = ["compat"] }
-futures01 = { package = "futures", version = "0.1" }
-k256 = { version = "0.5", default-features = false, features = ["ecdsa", "std"] }
+futures = "0.3"
+k256 = { version = "0.5", default-features = false, features = ["ecdsa"] }
+parking_lot = "0.11"
+plain_hasher = "0.2.3"
 primitive-types = { version = "0.7", default-features = false, features = ["rlp"] }
 rand = "0.7"
-rlp = "0.4"
+rlp = { version = "0.4", features = ["arrayvec"] }
 rlp-derive = "0.1"
 sha3 = "0.9"
 signature = { version = "1", features = ["std"] }
-tokio = "0.1"
-tokio-compat = "0.1"
+task-group = { git = "https://github.com/vorot93/task-group" }
+thiserror = "1"
+tokio = { version = "0.2", features = ["net", "rt-core"] }
+tokio-util = { version = "0.3", features = ["codec", "udp"] }
 tracing = "0.1"
 url = "2"
 
 [dev-dependencies]
+tokio = { version = "0.2", features = ["full"] }
 tracing-subscriber = "0.2"
+
+[patch.crates-io]
+rlp = { git = "https://github.com/vorot93/parity-common", branch = "arrayvec" }
