--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/rust-ethereum/discv4"
 edition = "2018"
 
 [dependencies]
+arrayref = "0.3"
 bytes = "0.4"
 chrono = "0.4"
 fixed-hash = { version = "*", features = ["std"] }
