--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,12 @@ arrayvec = "0.5.1"
 async-trait = "0.1"
 bytes = "0.5"
 chrono = "0.4"
+enum-primitive-derive = "0.2.1"
 fixed-hash = { version = "*", features = ["std"] }
 futures = "0.3"
+hex = "0.4.2"
 k256 = { version = "0.5", default-features = false, features = ["ecdsa"] }
+num-traits = "0.2.12"
 parking_lot = "0.11"
 plain_hasher = "0.2.3"
 primitive-types = { version = "0.7", default-features = false, features = ["rlp"] }
@@ -35,6 +38,7 @@ tokio = { version = "0.2", features = ["net", "rt-core"] }
 tokio-util = { version = "0.3", features = ["codec", "udp"] }
 tracing = "0.1"
 url = "2"
+uuid = { version = "0.8.1", features = ["v4"] }
 
 [dev-dependencies]
 tokio = { version = "0.2", features = ["full"] }
