--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ thiserror = "1"
 tokio = { version = "0.2", features = ["net", "rt-core"] }
 tokio-util = { version = "0.3", features = ["codec", "udp"] }
 tracing = "0.1"
+tracing-futures = "0.2"
 url = "2"
 uuid = { version = "0.8.1", features = ["v4"] }
 
