--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ enum-primitive-derive = "0.2.1"
 fixed-hash = { version = "*", features = ["std"] }
 futures = "0.3"
 hex = "0.4.2"
+igd = { version = "0.11", features = ["aio"] }
 k256 = { version = "0.5", default-features = false, features = ["ecdsa"] }
 num-traits = "0.2.12"
 parking_lot = "0.11"
