--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ parking_lot = "0.11"
 plain_hasher = "0.2.3"
 primitive-types = { version = "0.7", default-features = false, features = ["rlp"] }
 rand = "0.7"
-rlp = { version = "0.4", features = ["arrayvec"] }
+rlp = "0.4"
 rlp-derive = "0.1"
 sha3 = "0.9"
 signature = { version = "1", features = ["std"] }
@@ -44,6 +44,3 @@ url = "2"
 [dev-dependencies]
 tokio = { version = "0.2", features = ["full"] }
 tracing-subscriber = "0.2"
-
-[patch.crates-io]
-rlp = { git = "https://github.com/vorot93/parity-common", branch = "arrayvec" }
