--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,10 @@ array-init = "1.0.0"
 arrayref = "0.3"
 arrayvec = "0.5.1"
 async-trait = "0.1"
-bytes = "0.5"
 chrono = "0.4"
 enum-primitive-derive = "0.2.1"
 fixed-hash = { version = "*", features = ["std"] }
-futures = "0.3"
+futures-util = "0.3"
 hex = "0.4.2"
 igd = { version = "0.11", features = ["aio"] }
 k256 = { version = "0.5", default-features = false, features = ["ecdsa"] }
