--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,12 +34,12 @@ sha3 = "0.9"
 signature = { version = "1", features = ["std"] }
 task-group = { git = "https://github.com/vorot93/task-group" }
 thiserror = "1"
-tokio = { version = "0.2", features = ["net", "rt-core"] }
-tokio-util = { version = "0.3", features = ["codec", "udp"] }
+tokio = { version = "0.3", features = ["net", "rt", "sync", "time"] }
+tokio-compat-02 = "0.1"
 tracing = "0.1"
 tracing-futures = "0.2"
 url = "2"
 
 [dev-dependencies]
-tokio = { version = "0.2", features = ["full"] }
+tokio = { version = "0.3", features = ["full"] }
 tracing-subscriber = "0.2"
