--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,23 +12,24 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1"
-array-init = "1.0.0"
+array-init = "1"
 arrayref = "0.3"
-arrayvec = "0.5.1"
+arrayvec = "0.5"
 async-trait = "0.1"
+bytes = "0.6"
 chrono = "0.4"
-enum-primitive-derive = "0.2.1"
-fixed-hash = { version = "*", features = ["std"] }
+enum-primitive-derive = "0.2"
+fixed-hash = { version = "0.6", features = ["std"] }
 futures-util = "0.3"
 hex = "0.4.2"
 igd = { version = "0.11", features = ["aio"] }
-num-traits = "0.2.12"
+num-traits = "0.2"
 parking_lot = "0.11"
-plain_hasher = "0.2.3"
-primitive-types = { version = "0.7", default-features = false, features = ["rlp"] }
+plain_hasher = "0.2"
+primitive-types = { git = "https://github.com/paritytech/parity-common", default-features = false, features = ["rlp", "std"] }
 rand = "0.7"
-rlp = "0.4"
-rlp-derive = "0.1"
+rlp = { git = "https://github.com/paritytech/parity-common" }
+rlp-derive = { git = "https://github.com/paritytech/parity-common" }
 secp256k1 = { version = "0.19", features = ["global-context", "rand-std", "recovery"] }
 sha3 = "0.9"
 task-group = { git = "https://github.com/vorot93/task-group" }
