--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,20 +21,19 @@ chrono = "0.4"
 enum-primitive-derive = "0.2"
 futures-util = "0.3"
 hex = "0.4.2"
-igd = { git = "https://github.com/vorot93/rust-igd", branch = "bump-deps", features = ["aio"] }
+igd = { version = "0.12", features = ["aio"] }
 num-traits = "0.2"
 parking_lot = "0.11"
 plain_hasher = "0.2"
-primitive-types = { git = "https://github.com/paritytech/parity-common", features = ["rlp"] }
+primitive-types = { version = "0.8", features = ["rlp"] }
 rand = "0.8"
-rlp = { git = "https://github.com/paritytech/parity-common" }
-rlp-derive = { git = "https://github.com/paritytech/parity-common" }
-secp256k1 = { version = "0.20", features = ["global-context", "rand-std", "recovery"] }
+rlp = "0.5"
+rlp-derive = "0.1"
+secp256k1 = { version = "0.20", features = ["global-context", "recovery"] }
 sha3 = "0.9"
 task-group = { git = "https://github.com/vorot93/task-group" }
 thiserror = "1"
 tokio = { version = "1", features = ["net", "rt", "sync", "time"] }
-tokio-stream = "0.1"
 tracing = "0.1"
 tracing-futures = "0.2"
 url = "2"
